# smal

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: example
smal/: __init__.py  main.py  pyproject.toml  pytest.ini
smal/cli/commands/: __init__.py  helpers.py  install_graphviz.py
smal/codegen/: __init__.py  code_generator.py  target_primitive.py
smal/diagramming/: generation.py
smal/schemas/: smal_command.py  smal_debug.py  smal_error.py  smal_event.py  smal_file.py  smal_state.py  smal_struct.py  smal_transition.py  utilities.py
smal/tests/: test_smal_file.py
smal/utilities/: constants.py
src/examples/: example.smal  example_inlined.smal
src/examples/complex/: complex.smal
src/examples/simple_shorthand/: simple_shorthand.smal
src/examples/substates/: substates.smal
src/smal/cli/: app.py
src/smal/cli/commands/: __init__.py  code.py  debug.py  diagram.py  install_graphviz.py  validate.py
src/smal/codegen/: code_generator.py  smal_templates.py
src/smal/codegen/templates/: builtin_templates.py  c-machine-hdr.j2  smal_debug_c.j2  smal_debug_h.j2
src/smal/codegen/templates/c/: c_dbg_boilerplate_hdr.j2
src/smal/codegen/templates/macros/: builtin_macros.py  c_autogen_banner.j2  c_enum.j2  c_machine_state_table_entry.j2  c_union.j2
src/smal/codegen/templates/macros/c/: c_enum.j2  c_struct.j2
src/smal/diagramming/: generation.py
src/smal/schemas/: debug.py  smal_file.py  state.py  state_machine.py  transition.py
src/smal/utilities/: corrections.py  rules.py
